@@ -19,7 +19,6 @@ void handle_query(char *data, int len);
 void send_reply(const char *text);
 void PlayerCmd(unsigned char *data, int len);
 void item_actions(item *op);
-void Item1Cmd(unsigned char *data, int len);
 void Item2Cmd(unsigned char *data, int len);
 void UpdateItemCmd(unsigned char *data, int len);
 void DeleteItem(unsigned char *data, int len);
@@ -28,8 +27,6 @@ void AddspellCmd(unsigned char *data, int len);
 void UpdspellCmd(unsigned char *data, int len);
 void DeleteSpell(unsigned char *data, int len);
 void NewmapCmd(unsigned char *data, int len);
-void Map1Cmd(unsigned char *data, int len);
-void Map1aCmd(unsigned char *data, int len);
 void Map2Cmd(unsigned char *data, int len);
 void map_scrollCmd(char *data, int len);
 int ExtSmooth(unsigned char *data, int len, int x, int y, int layer);
@@ -39,14 +36,10 @@ void SinkCmd(unsigned char *data, int len);
 void TickCmd(uint8 *data, int len);
 /* image.c */
 void init_common_cache_data(void);
-void requestsmooth(int pnum);
 void requestface(int pnum, char *facename);
 void finish_face_cmd(int pnum, uint32 checksum, int has_sum, char *face, int faceset);
 void reset_image_cache_data(void);
-void FaceCmd(unsigned char *data, int len);
-void Face1Cmd(unsigned char *data, int len);
 void Face2Cmd(uint8 *data, int len);
-void ImageCmd(uint8 *data, int len);
 void Image2Cmd(uint8 *data, int len);
 void display_newpng(int face, uint8 *buf, int buflen, int setnum);
 void get_image_info(uint8 *data, int len);
@@ -60,7 +53,6 @@ void init_client_vars(void);
 void reset_player_data(void);
 void reset_client_vars(void);
 /* item.c */
-void init_item_types(void);
 uint8 get_type_from_name(const char *name);
 void update_item_sort(item *it);
 char *get_number(uint32 i);
@@ -114,9 +106,7 @@ void LOG(LogLevel level, const char *origin, const char *format, ...);
 void purgePipe(ChildProcess *cp, int pipe);
 void monitorChilds(void);
 void logPipe(ChildProcess *child, LogLevel level, int pipe);
-void unLogPipe(ChildProcess *child, int pipe);
 void logChildPipe(ChildProcess *child, LogLevel level, int flag);
-void unLogChildPipe(ChildProcess *child, int flag);
 ChildProcess *raiseChild(char *name, int flag);
 /* newsocket.c */
 void SockList_Init(SockList *sl, uint8 *buf);
